updated with Notes/TActivity

--- a/week2/index.html
+++ b/week2/index.html
@@ -28,11 +28,20 @@
     <header>Week 2</header>
     <main>
         <h2>Notes:</h2>
-        <p></p>
+        <p> "Template literals can be thought of as super-powered strings as they behave in <br> 
+            the same way as normal string literals, but with the extra power of string interpolation. <br>
+            For this reason, it is not uncommon to see backticks used to createallstrings in ES6 code" 
+            (JavaScript: Novice to Ninja, 2nd Edition).</p><br>
         <h3>Code examples:</h3>
-        <p></p>
+        <p>const name = `Siri`;
+            `Hello ${ name }!`; 
+            << 'Hello Siri!'!
+            const age = 39;
+            `I will be ${ age + 1 } next year`;
+            << 'I will be 40 next year'</p><br>
         <h3>Team Activity:</h3>
-        <p></p>
+        <p>This was our team activity this week. There is a link to the files on Chloe Hollman<br>
+        , who was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a></p>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
