--- a/week2/index.html
+++ b/week2/index.html
@@ -41,7 +41,7 @@
             << 'I will be 40 next year'</p><br>
         <h3>Team Activity:</h3>
         <p>This was our team activity this week. There is a link to the files on Chloe Hollman<br>
-        , who was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a></p>
+        GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a></p>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
