--- a/week3/index.html
+++ b/week3/index.html
@@ -3,11 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
     <title>Document</title>
 </head>
 <body>
-    <head></head>
-    <main></main>
+    <nav>
+        <ul id="navigation">
+            <li><a href="#" id="menu">&equiv; Menu</a></li>
+            <li><a href="../week1">Week 1</a></li>
+            <li><a href="../week2">Week 2</a></li>
+            <li><a href="../week3">Week 3</a></li>
+            <li><a href="../week4">Week 4</a></li>
+            <li><a href="../week5">Week 5</a></li>
+            <li><a href="../week6">Week 6</a></li>
+            <li><a href="../week7">Week 7</a></li>
+            <li><a href="../week8">Week 8</a></li>
+            <li><a href="../week9">Week 9</a></li>
+            <li><a href="../week10">Week 10</a></li>
+            <li><a href="../week11">Week 11</a></li>
+            <li><a href="../week12">Week 12</a></li>
+            <li><a href="../week13">Week 13</a></li>
+        </ul>
+    </nav>
+    <header>Week 3</header>
+    <main>
+        <h2>Notes:</h2>
+        <p> "The value of a property has always been allowed to be a JavaScript expression.<br> 
+            In the example below a ternary operator is used to return a true or false value<br> 
+            for the hero property depending on the value of the bewitched variable"<br>
+            (JavaScript: Novice to Ninja, 2nd Edition).</p><br>
+        <h3>Code examples:</h3>
+        <p>const bewitched = true;
+            const captainBritain = { name: 'Captain Britain', hero: bewitched ? false : true };
+            captainBritain
+            << { name: 'Captain Britain', hero: false }</p><br>
+        <h3>Team Activity:</h3>
+        <p>I was not present for the tea activity this week...</p>
+    </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
