--- a/week4/index.html
+++ b/week4/index.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
     <title>Document</title>
 </head>
 <body>
-    <head></head>
-    <main></main>
+    <nav>
+        <ul id="navigation">
+            <li><a href="#" id="menu">&equiv; Menu</a></li>
+            <li><a href="../week1">Week 1</a></li>
+            <li><a href="../week2">Week 2</a></li>
+            <li><a href="../week3">Week 3</a></li>
+            <li><a href="../week4">Week 4</a></li>
+            <li><a href="../week5">Week 5</a></li>
+            <li><a href="../week6">Week 6</a></li>
+            <li><a href="../week7">Week 7</a></li>
+            <li><a href="../week8">Week 8</a></li>
+            <li><a href="../week9">Week 9</a></li>
+            <li><a href="../week10">Week 10</a></li>
+            <li><a href="../week11">Week 11</a></li>
+            <li><a href="../week12">Week 12</a></li>
+            <li><a href="../week13">Week 13</a></li>
+        </ul>
+    </nav>
+    <header>Week 4</header>
+    <main>
+        <h2>Notes:</h2>
+        <p> "This function uses the event.preventDefault() method to stop the<br> 
+            form from being submitted. We then create a local variable called<br> 
+            hero and assign it to an empty object literal. We’ll then augment<br> 
+            this object with properties from the form, although we only have<br> 
+            the name property at the moment. Once the hero object is created,<br> 
+            it would probably be returned by the function then used elsewhere<br> 
+            in the rest of the program. Since this is just for demonstration<br> 
+            purposes, we simple use the JSON.stringify() method to convert the<br> 
+            hero object into a JSON string and display it in an alert dialog."<br>
+            (JavaScript: Novice to Ninja, 2nd Edition).</p><br>
+        <h3>Code examples:</h3>
+        <p>function makeHero(event) {
+            event.preventDefault(); // prevent the form from being submitted
+            const hero = {}; // create an empty object
+            hero.name = form.heroName.value; // create a name property based on the input field's value
+            alert(JSON.stringify(hero)); // convert object to JSON string and display in alert dialog
+            return hero;
+        }</p><br>
+        <h3>Team Activity:</h3>     
+        <p>This week I was the driver for Team Activity 4</p>
+    </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
