--- a/week4/teamActivity.html
+++ b/week4/teamActivity.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+  <!--Our team attempted start here done till the teachers solution-->
+  <!--Teacher solution is marked by a comment below-->
+  <!--Still was not to get it working via JS side-->
     <h2>Our Tic-Tac-Toe game</h2>
 <p></p>
   <table id="board">
@@ -29,27 +32,56 @@
 
   <script>
 
-const player1 = {
-  name: "Player 1",
-  response: "X",
-  point: 0,
-  score: function(){
-      if (point <= player2.point) {
+// const player1 = {
+//   name: "Player 1",
+//   response: "X",
+//   point: 0,
+//   score: function(){
+//       if (point <= player2.point) {
         
-      }
-    }
-};
+//       }
+//     }
+// };
 
-const player2 = {
-  name: "Player 1",
-  response: "X",
-  point: 0,
-  score: function(){
-      if (point <= player1.point) {
+// const player2 = {
+//   name: "Player 1",
+//   response: "X",
+//   point: 0,
+//   score: function(){
+//       if (point <= player1.point) {
         
+//       }
+//     }
+// };
+//Everything above for the script and the body we did in our team.
+// everything below here is the teachers solution
+const board = document.querySelector('.board');
+      const divBoard = document.querySelector('.divBoard');
+      const resetButton = document.getElementById('reset');
+      const player1 = 'X';
+      const player2 = 'O';
+      let player = player1;
+      function addPiece(e) {
+        console.log(e.target);
+        e.target.innerHTML = player;
+        if (player === player1) player = player2;
+        else player = player1;
       }
-    }
-};
+      // table version
+      function resetBoard() {
+        console.dir(board);
+        for (let i = 0; i < board.rows.length; i++) {
+          let row = board.rows[i];
+          for (let j = 0; j < row.cells.length; j++) {
+            row.cells[j].innerHTML = '';
+          }
+        }
+      }
+      board.addEventListener('click', addPiece);
+      divBoard.addEventListener('click', addPiece);
+      reset.addEventListener('click', resetBoardDiv);
+    </script>
+
   </script>
 </body>
 </html>
