--- a/week6/ToDO.html
+++ b/week6/ToDO.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="toDO.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>JS practicing Coding</h1>
-    
+    <h1>To-Do App</h1>
+    <input id="taskToDo" type="text">
+    <button onclick=></button>
 </body>
-<script src="toDo.js"></script>
 </html>
