adding To Do Challenge

--- a/week6/index.html
+++ b/week6/index.html
@@ -37,7 +37,7 @@
 
         <h3>Code examples:</h3>
         <p>pi = 3.142;
-            << JavaScript Warning: assignment to undeclared variable
+            JavaScript Warning: assignment to undeclared variable
         </p><br>
         <h3>Team Activity: None this week6</h3>     
         <p>This week since there are a lot of files the link is include to To Do Challenge</p>
