adding To Do Challenge

--- a/week5/index.html
+++ b/week5/index.html
@@ -44,7 +44,7 @@
 
         <h3>Code examples:</h3>
         <p>pi = 3.142;
-            << JavaScript Warning: assignment to undeclared variable
+            JavaScript Warning: assignment to undeclared variable
         </p><br>
         <h3>Team Activity:</h3>     
         <p>This week Chloe was the driver for the team activity. The code is listed below.</p>
