--- a/week6/ToDO.html
+++ b/week6/ToDO.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="toDO.css">
     <title>To Do App challenge</title>
 </head>
+<nav>
+    <ul id="navigation">
+        <li><a href="#" id="menu">&equiv; Menu</a></li>
+        <li><a href="../week1">Week 1</a></li>
+        <li><a href="../week2">Week 2</a></li>
+        <li><a href="../week3">Week 3</a></li>
+        <li><a href="../week4">Week 4</a></li>
+        <li><a href="../week5">Week 5</a></li>
+        <li><a href="../week6">Week 6</a></li>
+        <li><a href="../week7">Week 7</a></li>
+        <li><a href="../week8">Week 8</a></li>
+        <li><a href="../week9">Week 9</a></li>
+        <li><a href="../week10">Week 10</a></li>
+        <li><a href="../week11">Week 11</a></li>
+        <li><a href="../week12">Week 12</a></li>
+        <li><a href="../week13">Week 13</a></li>
+    </ul>
+</nav>
 <body class="mainContainer">
     <h1>To-Do app</h1>
         <div>
@@ -26,6 +45,10 @@
         <div class="filterCompletedDiv"></div>
         <div class="filterActiveDiv"></div>
       </div>
+      <p>I struggled a lot the past two weeks... I an plan on working more on<br>
+    and improving it a lot a long with making sure to get TA help earlier. For future<br>
+    concepts and past ones so I can better review. So my final Project and more portfolio<br>
+    will be great and I will be able to learn and pass the class. I have alot to improve.</p>
     <script src="toDo.js"></script>
 </body>
 </html>
