editted To Do comment

--- a/week6/index.html
+++ b/week6/index.html
@@ -45,10 +45,8 @@
         <div class="filterCompletedDiv"></div>
         <div class="filterActiveDiv"></div>
       </div>
-      <p>I struggled a lot the past two weeks... I an plan on working more on<br>
-    and improving it a lot a long with making sure to get TA help earlier. For future<br>
-    concepts and past ones so I can better review. So my final Project and more portfolio<br>
-    will be great and I will be able to learn and pass the class. I have alot to improve.</p>
+      <p>I struggled a lot the past two weeks... I am plan on working more on<br>
+    my portfolio. And getting more TA help.</p>
     <script src="toDo.js"></script>
 </body>
 </html>
