--- a/week6/index.html
+++ b/week6/index.html
@@ -45,8 +45,11 @@
         <div class="filterCompletedDiv"></div>
         <div class="filterActiveDiv"></div>
       </div>
-      <p>I struggled a lot the past two weeks... I am plan on working more on<br>
-    my portfolio. And getting more TA help.</p>
+      <p> Note: I was trying to implement a touch feature. After adding item if you<br>
+          it push the x or remove button it will work. But if you click with mouse it<br>
+          wont.<br>
+          I struggled a lot the past two weeks... I am plan on working more on<br>
+        my portfolio. And getting more TA help.</p>
     <script src="toDo.js"></script>
 </body>
 </html>
