--- a/week2/index.html
+++ b/week2/index.html
@@ -41,7 +41,13 @@
             << 'I will be 40 next year'</p><br>
         <h3>Team Activity:</h3>
         <p>This was our team activity this week. There is a link to the files on Chloe Hollman<br>
-        GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a></p>
+        GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a><br>
+        This is the team could that was done in class. I will also add some more to it.</p>
+        <label for = "first name">Enter Number</label>
+        <input type="number" id="input">+
+        <input type="number" id="input">
+            <div id="name"></div><button type="button" onclick="names()">Click here</button>
+    <script src="scripts/teamActivity2.js"></script>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
