--- a/week6/index.html
+++ b/week6/index.html
@@ -25,8 +25,9 @@
         <li><a href="../week13">Week 13</a></li>
     </ul>
 </nav>
-<body class="mainContainer">
-    <h1>To-Do app</h1>
+<body>
+    <div class="container">
+        <h1>To-Do app</h1>
         <div>
             <ul class="list">
                 
@@ -50,6 +51,7 @@
           wont.<br>
           I struggled a lot the past two weeks... I am plan on working more on<br>
         my portfolio. And getting more TA help.</p>
+    </div>
     <script src="toDo.js"></script>
 </body>
 </html>
