--- a/week7/index.html
+++ b/week7/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <head></head>
-    <main></main>
-    <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Great Hikes (dynamic DOM example)</title>
+    <link rel="stylesheet" href="hikes.css">
+    <link rel="stylesheet" href="../styles/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+  </head>
+  <nav>
+    <ul id="navigation">
+        <li><a href="#" id="menu">&equiv; Menu</a></li>
+        <li><a href="../week1">Week 1</a></li>
+        <li><a href="../week2">Week 2</a></li>
+        <li><a href="../week3">Week 3</a></li>
+        <li><a href="../week4">Week 4</a></li>
+        <li><a href="../week5">Week 5</a></li>
+        <li><a href="../week6">Week 6</a></li>
+        <li><a href="../week7">Week 7</a></li>
+        <li><a href="../week8">Week 8</a></li>
+        <li><a href="../week9">Week 9</a></li>
+        <li><a href="../week10">Week 10</a></li>
+        <li><a href="../week11">Week 11</a></li>
+        <li><a href="../week12">Week 12</a></li>
+        <li><a href="../week13">Week 13</a></li>
+    </ul>
+</nav>
+  <body>
+    <main>
+      <h1>Great hikes</h1>
+      <ul id="hikes" class="hikeStyles"></ul>
+      <section id="comments"></section>
+    </main>
+    <h2>Week 06 Notes:</h2>
+    <p>Dealing With A Settled Promise<br>
+      Once a promise has been settled, the then() method can be used to deal with the outcome.<br> 
+      This method accepts two arguments. The first is afulfilment functionthat’s called when<br> 
+      the promise is resolved. Any data returned from the resolve() function will be passed<br> 
+      along to this function. The second argument is a rejection function that’s called if<br> 
+      the promise is rejected. Similar to the fulfilment function, the rejection function<br> 
+      receives any data returned from the reject() function.</p>
+      <h2>Code sample</h2>
+      <p>
+        romise.then( result => console.log(`I rolled a ${result}`) )
+            .catch( result => console.log(`Drat! ... I rolled a ${result}`) );
+      </p>
+    <script type="module" src="app5.js"></script>
+  </body>
 </html>
