--- a/week2/index.html
+++ b/week2/index.html
@@ -44,10 +44,14 @@
         GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a><br>
         This is the team could that was done in class. I will also add some more to it.</p>
         <label for = "first name">Enter Number</label>
-        <input type="number" id="input">+
-        <input type="number" id="input">
-            <div id="name"></div><button type="button" onclick="names()">Click here</button>
-    <script src="scripts/teamActivity2.js"></script>
+        
+        <input type="number" id="input1"> +
+        <input type="number" id="input2">
+        <button id="click">Click here</button>
+            <div id="outPut"></div>
+            <div id="outPut2"></div>
+            <div id="total"></div>
+    <script src="teamActivity2.js"></script>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
