--- a/week2/index.html
+++ b/week2/index.html
@@ -45,12 +45,12 @@
         This is the team could that was done in class. I will also add some more to it.</p>
         <label for = "first name">Enter Number</label>
         
-        <input type="number" id="input1"> +
-        <input type="number" id="input2">
+        <input type="text" id="inputOne"> +
+        <input type="text" id="inputTwo">
         <button id="click">Click here</button>
-            <div id="outPut"></div>
-            <div id="outPut2"></div>
-            <div id="total"></div>
+            <div id="outPutOne"></div>
+            <div id="outPutTwo"></div>
+            <div id="sumTotal"></div>
     <script src="teamActivity2.js"></script>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
