--- a/week2/index.html
+++ b/week2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="teamActivity2.css">
     <title>Document</title>
 </head>
 <body>
@@ -43,6 +44,14 @@
         <p>This was our team activity this week. There is a link to the files on Chloe Hollman<br>
         GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a><br>
         This is the team could that was done in class. I will also add some more to it.</p>
+
+        <!-- This was the team effort for html. But I have made changes both here and in my JavaScript.
+        <button type="button" onclick="names()">Click here</button>
+        <input type="number" id="input">+
+        <input type="number" id="input">
+        <label for = "first name">Enter Number</label><br>
+        <div id="name"></div>-->
+
         <label for = "first name">Enter Number</label>
         
         <input type="text" id="inputOne"> +
