added high leve js

--- a/week2/index.html
+++ b/week2/index.html
@@ -56,7 +56,7 @@
         
         <input type="text" id="inputOne"> +
         <input type="text" id="inputTwo">
-        <button id="click">Click here</button>
+        <button id="click">Calculate</button>
             <div id="outPutOne"></div>
             <div id="outPutTwo"></div>
             <div id="sumTotal"></div>
