--- a/week3/index.html
+++ b/week3/index.html
@@ -38,7 +38,7 @@
             captainBritain
             << { name: 'Captain Britain', hero: false }</p><br>
         <h3>Team Activity:</h3>     
-        <p>I was not present for the tea activity this week...</p>
+        <p>I was not present for the tea activity this week...</p><br>
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
