--- a/week3/index.html
+++ b/week3/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <title>Document</title>
+    <title>Array Cardio</title>
 </head>
-<body>
+<body data-gr-c-s-loaded="true">
     <nav>
         <ul id="navigation">
             <li><a href="#" id="menu">&equiv; Menu</a></li>
@@ -38,9 +38,13 @@
             captainBritain
             << { name: 'Captain Britain', hero: false }</p><br>
         <h3>Team Activity:</h3>     
-        <p>I was not present for the tea activity this week...</p><br>
+        <p>I was not present for the team activity this week...But I have worked and completed
+            the assignment. 
+        </p><br>
+        <em>Psst: have a look at the JavaScript Console</em>
+        " 💁" 
     </main>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
-    <script src="../scripts/main.js"></script>
+    <script src="teamActivity3.js"></script>
 </body>
 </html>
