--- a/week8/index.html
+++ b/week8/index.html
@@ -27,6 +27,10 @@
     </nav>
     <head></head>
     <main></main>
+    <div id="pokemonStuff">
+
+    </div>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
+    <script src="teamActivity8.js"></script>
 </body>
 </html>
