adding new material

--- a/week8/index.html
+++ b/week8/index.html
@@ -27,9 +27,9 @@
     </nav>
     <head></head>
     <main></main>
-    <div id="pokemonStuff">
-
-    </div>
+    <ul id="newList"></ul>
+    <button id="prevBTN">PREV</button> 
+    <button id="nextBTN">NEXT</button>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="teamActivity8.js"></script>
 </body>
