adding new material

--- a/week8/index.html
+++ b/week8/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="teamActivity8.css">
     <title>Week 08 Notes, Assignments, sample code</title>
 </head>
 <body>
@@ -29,8 +30,9 @@
     <main></main>
     <ul id="newList"></ul>
     <button id="prevBTN">PREV</button> 
-    <button id="nextBTN">NEXT</button>
+    <button id="nextBTN">NEXT</button><br><br>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="teamActivity8.js"></script>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
