week 8 TA and Notes

--- a/week8/index.html
+++ b/week8/index.html
@@ -31,6 +31,8 @@
     <ul id="newList"></ul>
     <button id="prevBTN">PREV</button> 
     <button id="nextBTN">NEXT</button><br><br>
+    <a class="Notes" href="notes.html" title="Week 08 Notes">Notes Link</a><br><br>
+
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="teamActivity8.js"></script>
     <script src="../scripts/main.js"></script>
