updating folders/notes/nav

--- a/htmls/notesWeek2.html
+++ b/htmls/notesWeek2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="teamActivity2.css">
+    <link rel="styleSheet" href="../styles/notes.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,32 +26,22 @@
             <li><a href="../week13">Week 13</a></li>
         </ul>
     </nav>
-    <header>Week 2</header>
-    <main>
-        <h1>Team Activity:</h1>
+    <h2>Notes:</h2>
+        <p> "Template literals can be thought of as super-powered strings as they behave in <br> 
+            the same way as normal string literals, but with the extra power of string interpolation. <br>
+            For this reason, it is not uncommon to see backticks used to createallstrings in ES6 code" 
+            (JavaScript: Novice to Ninja, 2nd Edition).</p><br>
+        <h3>Code examples:</h3>
+        <p>const name = `Siri`;
+            `Hello ${ name }!`; 
+            << 'Hello Siri!'!
+            const age = 39;
+            `I will be ${ age + 1 } next year`;
+            << 'I will be 40 next year'</p><br>
+        <h3>Team Activity:</h3>
         <p>This was our team activity this week. There is a link to the files on Chloe Hollman<br>
         GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a><br>
         This is the team could that was done in class. I will also add some more to it.</p>
-
-        <!-- This was the team effort for html. But I have made changes both here and in my JavaScript.
-        <button type="button" onclick="names()">Click here</button>
-        <input type="number" id="input">+
-        <input type="number" id="input">
-        <label for = "first name">Enter Number</label><br>
-        <div id="name"></div>-->
-
-        <label for = "first name">Enter Number</label>
-        
-        <input type="text" id="inputOne"> +
-        <input type="text" id="inputTwo">
-        <button id="click">Calculate</button>
-            <div id="outPutOne"></div>
-            <div id="outPutTwo"></div>
-            <div id="sumTotal"></div>
-    <script src="teamActivity2.js"></script>
-    </main>
-    <a class="Notes" href="../htmls/notesWeek2.html" title="Week 02 Notes">Notes Link</a><br><br>
-    <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
-    <script src="../scripts/main.js"></script>
+        <script src="../scripts/main.js"></script>
 </body>
 </html>
