--- a/htmls/notesWeek8.html
+++ b/htmls/notesWeek8.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
     <title>Week 08 Notes</title>
 </head>
 <body>
+    <nav>
+        <ul id="navigation">
+            <li><a href="#" id="menu">&equiv; Menu</a></li>
+            <li><a href="../week1">Week 1</a></li>
+            <li><a href="../week2">Week 2</a></li>
+            <li><a href="../week3">Week 3</a></li>
+            <li><a href="../week4">Week 4</a></li>
+            <li><a href="../week5">Week 5</a></li>
+            <li><a href="../week6">Week 6</a></li>
+            <li><a href="../week7">Week 7</a></li>
+            <li><a href="../week8">Week 8</a></li>
+            <li><a href="../week9">Week 9</a></li>
+            <li><a href="../week10">Week 10</a></li>
+            <li><a href="../week11">Week 11</a></li>
+            <li><a href="../week12">Week 12</a></li>
+            <li><a href="../week13">Week 13</a></li>
+        </ul>
+    </nav>
     <h1>Week 08 Notes</h1>
     <p>Week 08 notes - This week we covered a lot of CSS3 such as animations, transforms, translations<br>
         and other tools to change our CSS. The one important thing that I learned overall from the reading<br>
