--- a/week8/index.html
+++ b/week8/index.html
@@ -31,7 +31,7 @@
     <ul id="newList"></ul>
     <button id="prevBTN">PREV</button> 
     <button id="nextBTN">NEXT</button><br><br>
-    <a class="Notes" href="notes.html" title="Week 08 Notes">Notes Link</a><br><br>
+    <a class="Notes" href="../htmls/notesWeek8.html" title="Week 08 Notes">Notes Link</a><br><br>
 
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="teamActivity8.js"></script>
