--- a/week3/index.html
+++ b/week3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/teamActivity3.css">
     <title>Array Cardio</title>
 </head>
 <body data-gr-c-s-loaded="true">
