--- a/week8/index.html
+++ b/week8/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="teamActivity8.css">
+    <link rel="stylesheet" href="../styles/teamActivity8.css">
     <title>Week 08 Notes, Assignments, sample code</title>
 </head>
 <body>
