--- a/week10/index.html
+++ b/week10/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+    <meta charset="utf-8" />
+        <title>Local Quakes</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+
+    <body>
+        <main>
+            <h1>Quake List</h1>
+            <ul id="quakeList" ></ul>
+        </main>
+        <script src="JavaScript/index.js" type="module" ></script>
+    </body>
 </html>
