--- a/week10/index.html
+++ b/week10/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
         <title>Local Quakes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="../styles/index.css">
     </head>
 
     <body>
         <main>
             <h1>Quake List</h1>
-            <ul id="quakeList" ></ul>
+            <ul id="quakeList"></ul>
         </main>
         <script src="JavaScript/index.js" type="module" ></script>
     </body>
