--- a/htmls/notesWeek3.html
+++ b/htmls/notesWeek3.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 3 Read and Notes</title>
 </head>
 <body>
-    <nav>
-        <ul id="navigation">
-            <li><a href="#" id="menu">&equiv; Menu</a></li>
-            <li><a href="../week1">Week 1</a></li>
-            <li><a href="../week2">Week 2</a></li>
-            <li><a href="../week3">Week 3</a></li>
-            <li><a href="../week4">Week 4</a></li>
-            <li><a href="../week5">Week 5</a></li>
-            <li><a href="../week6">Week 6</a></li>
-            <li><a href="../week7">Week 7</a></li>
-            <li><a href="../week8">Week 8</a></li>
-            <li><a href="../week9">Week 9</a></li>
-            <li><a href="../week10">Week 10</a></li>
-            <li><a href="../week11">Week 11</a></li>
-            <li><a href="../week12">Week 12</a></li>
-            <li><a href="../week13">Week 13</a></li>
-        </ul>
-    </nav>
+    <div class="container">
+        <div class="navigationTop">
+          <label>PORTFOLIO - 2021</label>
+          <div class="weeklyLinks">
+            <a href="../week1">Week 1</a>
+            <a href="../week2">Week 2</a>
+            <a href="../week3">Week 3</a>
+            <a href="../week4">Week 4</a>
+            <a href="../week5">Week 5</a>
+            <a href="../week6">Week 6</a>
+            <a href="../week7">Week 7</a>
+            <a href="../week8">Week 8</a>
+            <a href="../week9">Week 9</a>
+            <a href="../week10">Week 10</a>
+            <a href="../week11">Week 11</a>
+            <a href="../week12">Week 12</a>
+            <a href="../week13">Week 13</a>
+          </div>
+          <a href="javascript:void(0);" class="menuIcon" id="listControl">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
     <header>Week 3</header>
     <main>
         <h2>Notes:</h2>
@@ -38,5 +43,6 @@
             captainBritain
             << { name: 'Captain Britain', hero: false }</p> 
         </p>
+        <script src="scripts/main.js"></script>
 </body>
 </html>
