--- a/week12/index.html
+++ b/week12/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="navigationTop">
+          <label>PORTFOLIO - 2021</label>
+          <div class="weeklyLinks">
+            <a href="../week1">Week 1</a>
+            <a href="../week2">Week 2</a>
+            <a href="../week3">Week 3</a>
+            <a href="../week4">Week 4</a>
+            <a href="../week5">Week 5</a>
+            <a href="../week6">Week 6</a>
+            <a href="../week7">Week 7</a>
+            <a href="../week8">Week 8</a>
+            <a href="../week9">Week 9</a>
+            <a href="../week10">Week 10</a>
+            <a href="../week11">Week 11</a>
+            <a href="../week12">Week 12</a>
+            <a href="../week13">Week 13</a>
+          </div>
+          <a href="javascript:void(0);" class="menuIcon" id="listControl">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
     <head></head>
     <main></main>
+    <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
 </body>
 </html>
