--- a/week1/index.html
+++ b/week1/index.html
@@ -33,7 +33,7 @@
     <header>Week 1</header>
     <main>
         <h2>Notes:</h2>
-        <p>Master Mobile UX video – Three things that help with getting inside user’s heads<br>
+        <p>Master Mobile UX svideo – Three things that help with getting inside user’s heads<br>
             when trying to design mobile websites:- Be there, be useful, be quick.Remember<br> 
             that it is better to plan a website using mobile app design. Then we can expand<br> 
             on this to other larger devices so that we can keep users. But there are other<br> 
