--- a/week13/index.html
+++ b/week13/index.html
@@ -36,18 +36,10 @@
     <header>Stephen's Pokedex Project list 150 different Pokemon</header>
 <div id="stylePokemanList">
     <ol id="pokedexList"></ol>
+    <button id="previousBtn">PREVIOUS</button>
+    <button id="nextBtn">NEXT</button><br><br>
 </div>
     <div class="paginationDisplay">
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
-        <div class="tabs"></div>
     </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
