--- a/week13/index.html
+++ b/week13/index.html
@@ -14,19 +14,19 @@
         <div class="navigationTop">
           <label>PORTFOLIO - 2021</label>
           <div class="weeklyLinks">
-            <a href="../WDD330-SELLIS/week1">Week 1</a>
-            <a href="../WDD330-SELLIS/week2">Week 2</a>
-            <a href="../WDD330-SELLIS/week3">Week 3</a>
-            <a href="../WDD330-SELLIS/week4">Week 4</a>
-            <a href="../WDD330-SELLIS/week5">Week 5</a>
-            <a href="../WDD330-SELLIS/week6">Week 6</a>
-            <a href="../WDD330-SELLIS/week7">Week 7</a>
-            <a href="../WDD330-SELLIS/week8">Week 8</a>
-            <a href="../WDD330-SELLIS/week9">Week 9</a>
-            <a href="../WDD330-SELLIS/week10">Week 10</a>
-            <a href="../WDD330-SELLIS/week11">Week 11</a>
-            <a href="../WDD330-SELLIS/week12">Week 12</a>
-            <a href="../WDD330-SELLIS/week13">Week 13</a>
+            <a href="../week1">Week 1</a>
+            <a href="../week2">Week 2</a>
+            <a href="../week3">Week 3</a>
+            <a href="../week4">Week 4</a>
+            <a href="../week5">Week 5</a>
+            <a href="../week6">Week 6</a>
+            <a href="../week7">Week 7</a>
+            <a href="../week8">Week 8</a>
+            <a href="../week9">Week 9</a>
+            <a href="../week10">Week 10</a>
+            <a href="../week11">Week 11</a>
+            <a href="../week12">Week 12</a>
+            <a href="../week13">Week 13</a>
           </div>
           <a href="javascript:void(0);" class="menuIcon" id="listControl">
             <i class="fa fa-bars"></i>
@@ -36,9 +36,11 @@
     <header>Stephen's Pokedex Project list 150 different Pokemon</header>
 <div id="stylePokemanList">
     <ol id="pokedexList"></ol>
-    <button id="previousBtn">PREVIOUS</button>
-    <button id="favoritesBtn">FAVORITES</button>
-    <button id="nextBtn">NEXT</button><br><br>
+</div>
+<div id="btnCoantainer">
+  <button id="previousBtn">PREVIOUS</button>
+  <button id="favoritesBtn">FAVORITES</button>
+  <button id="nextBtn">NEXT</button><br><br>
 </div>
     <div class="paginationDisplay">
     </div>
