--- a/week13/index.html
+++ b/week13/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="navigationTop">
-          <label>PORTFOLIO - 2021</label>
+          <a href="#MainPage" class="active">PORTFOLIO - 2021</a>
           <div class="weeklyLinks">
             <a href="../week1">Week 1</a>
             <a href="../week2">Week 2</a>
