--- a/week9/index.html
+++ b/week9/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="containerM">
     <div class="navigationTop">
-      <label>PORTFOLIO - 2021</label>
+      <a href="#MainPage" class="active">PORTFOLIO - 2021</a>
       <div class="weeklyLinks">
         <a href="../week1">Week 1</a>
         <a href="../week2">Week 2</a>
