fixed manin menu links

--- a/week6/index.html
+++ b/week6/index.html
@@ -10,7 +10,7 @@
 </head>
 <div class="container">
     <div class="navigationTop">
-      <a href="#MainPage" class="active">PORTFOLIO - 2021</a>
+      <a href="../index.html" class="active">PORTFOLIO - 2021</a>
       <div class="weeklyLinks">
         <a href="../week1">Week 1</a>
         <a href="../week2">Week 2</a>
