fixed sorting issue and more styling

--- a/week13/index.html
+++ b/week13/index.html
@@ -32,18 +32,13 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-    <head></head>
-    <header>Stephen's Pokedex Project list 150 different Pokemon</header>
+    <header>Stephen's Pokedex Project: List all known Pokemon</header>
 <div id="stylePokemanList">
     <ol id="pokedexList"></ol>
+    <button id="previousBtn">PREVIOUS</button>
+    <button id="favoritesBtn">FAVORITES</button>
+    <button id="nextBtn">NEXT</button><br><br>
 </div>
-<div id="btnCoantainer">
-  <button id="previousBtn">PREVIOUS</button>
-  <button id="favoritesBtn">FAVORITES</button>
-  <button id="nextBtn">NEXT</button><br><br>
-</div>
-    <div class="paginationDisplay">
-    </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis | Educational</footer>
