fixed button grid

--- a/week13/index.html
+++ b/week13/index.html
@@ -35,9 +35,12 @@
     <header>Stephen's Pokedex Project: List all known Pokemon</header>
 <div id="stylePokemanList">
     <ol id="pokedexList"></ol>
-    <button id="previousBtn">PREVIOUS</button>
-    <button id="favoritesBtn">FAVORITES</button>
-    <button id="nextBtn">NEXT</button><br><br>
+    
+</div>
+<div id="btnContainer">
+  <button id="previousBtn">PREVIOUS</button>
+  <button id="favoritesBtn">FAVORITES</button>
+  <button id="nextBtn">NEXT</button><br>
 </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
