fixed button grid and styling

--- a/week13/index.html
+++ b/week13/index.html
@@ -40,7 +40,7 @@
 <div id="btnContainer">
   <button id="previousBtn">PREVIOUS</button>
   <button id="favoritesBtn">FAVORITES</button>
-  <button id="nextBtn">NEXT</button><br>
+  <button id="nextBtn">NEXT</button>
 </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
