Adding styling to buttons

--- a/week13/index.html
+++ b/week13/index.html
@@ -35,11 +35,13 @@
     <header>Stephen's Pokedex Project: List all known Pokemon</header>
 <div id="stylePokemanList">
     <ol id="pokedexList"></ol>
-    
+</div>
+<div>
+  
 </div>
 <div id="btnContainer">
   <button id="previousBtn">PREVIOUS</button>
-  <button id="favoritesBtn">FAVORITES</button>
+  <button id="favoritesLocalStorageBtn">FAVORITES</button>
   <button id="nextBtn">NEXT</button>
 </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
