--- a/week4/index.html
+++ b/week4/index.html
@@ -31,15 +31,28 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-<header>Week 4: Tic Tac Toe Game</header>
+<h3>Week 4: Tic Tac Toe Game</h3>
     <main>    
-        <p>Note: This week I was the driver for Team Activity 4</p>
-        <button class="notesLink">
+        <p class="styleText">Note: This week I was the driver for Team Activity 4</p>
+        
+    </main>
+    <div class = "gameBoard">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div><br><br>
+    <div id="buttonGrid">
+    <button class="newGameBtn">New Game</button>
+      <button class="notesLink">
             <a class="linkStyling" href="../htmls/notesWeek4.html">Notes Link</a>
         </button>
-    </main>
-   
-    <button class="newGameBtn">New Game</button>
+    </div>
     <script src="scripts/teamActivityW4.js"></script>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
