--- a/week13/index.html
+++ b/week13/index.html
@@ -46,8 +46,10 @@
 <div id="backgroundModal"></div>
 <div id="btnContainer">
   <button id="previousBtn"> PREV</button>
-  <button id="favoritesLocalStorageBtn">FAV</button>
+  <button id="favoritesFilterBtn">FAV</button>
+  <button id="allFilterBtn">ALL</button>
   <button id="nextBtn">NEXT</button>
+  
 </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
