modal is now fully functional

--- a/week13/index.html
+++ b/week13/index.html
@@ -37,7 +37,7 @@
     <ol id="pokedexList"></ol>
 </div>
 
-<div class="pokedexEntryContainer active" id="pokedexEntryContainer"><!--modal-->
+<div class="pokedexEntryContainer" id="pokedexEntryContainer"><!--modal-->
   <div class="pokedexEntryHeader"><!--modal-header-->
     <button  id="favBtn">FAV</button>
     <div class="modal-title">POKEDEX ENTRY </div>
@@ -45,7 +45,7 @@
 </div>
 <div id="modalBody" class="modalBody"></div>
 </div>   
-<div id="backgroundModal" class="active"></div><!--overlay-->
+<div class="backgroundModal"></div><!--overlay-->
 
 <div id="btnContainer">
   <button id="previousBtn"> PREV</button>
