--- a/week13/index.html
+++ b/week13/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="styles/pokeStylesW13.css">
-    <link rel="stylesheet" href="styles/modalStyleW13.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Week 13 - Finale Challenge</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="styles/pokeStylesW13.css">
+  <link rel="stylesheet" href="styles/modalStyleW13.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Week 13 - Finale Challenge</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="navigationTop">
-          <a href="../index.html" class="active">PORTFOLIO - 2021</a>
-          <div class="weeklyLinks">
-            <a href="../week1">Week 1</a>
-            <a href="../week2">Week 2</a>
-            <a href="../week3">Week 3</a>
-            <a href="../week4">Week 4</a>
-            <a href="../week5">Week 5</a>
-            <a href="../week6">Week 6</a>
-            <a href="../week7">Week 7</a>
-            <a href="../week8">Week 8</a>
-            <a href="../week9">Week 9</a>
-            <a href="../week10">Week 10</a>
-            <a href="../week11">Week 11</a>
-            <a href="../week12">Week 12</a>
-            <a href="../week13">Week 13</a>
-          </div>
-          <a href="javascript:void(0);" class="menuIcon" id="listControl">
-            <i class="fa fa-bars"></i>
-          </a>
-        </div>
+  <div class="container">
+    <div class="navigationTop">
+      <a href="../index.html" class="active">PORTFOLIO - 2021</a>
+      <div class="weeklyLinks">
+        <a href="../week1">Week 1</a>
+        <a href="../week2">Week 2</a>
+        <a href="../week3">Week 3</a>
+        <a href="../week4">Week 4</a>
+        <a href="../week5">Week 5</a>
+        <a href="../week6">Week 6</a>
+        <a href="../week7">Week 7</a>
+        <a href="../week8">Week 8</a>
+        <a href="../week9">Week 9</a>
+        <a href="../week10">Week 10</a>
+        <a href="../week11">Week 11</a>
+        <a href="../week12">Week 12</a>
+        <a href="../week13">Week 13</a>
+      </div>
+      <a href="javascript:void(0);" class="menuIcon" id="listControl">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
     <header>Stephen's Pokedex Project: List all known Pokemon</header>
-<div id="stylePokemanList">
-    <ol id="pokedexList"></ol>
-</div>
-
-<div class="pokedexEntryContainer" id="pokedexEntryContainer"><!--modal-->
-  <div class="pokedexEntryHeader"><!--modal-header-->
-    <button  id="favBtn">FAV</button>
-    <div class="modal-title">POKEDEX ENTRY </div>
-    <button  id="closeBtn">CLOSE</button>
-</div>
-<div id="modalBody" class="modalBody"></div>
-</div>   
-<div class="backgroundModal"></div><!--overlay-->
-
-<div id="btnContainer">
-  <button id="previousBtn"> PREV</button>
-  <button id="favoritesFilterBtn">FAV</button>
-  <button id="allFilterBtn">ALL</button>
-  <button id="nextBtn">NEXT</button>
-  
-</div>
+    <div id="stylePokemanList">
+      <ol id="pokedexList"></ol>
+    </div>
+    <div id="pokedexEntryContainer" class="pokedexEntryContainer">
+      <div class="pokedexEntryHeader">
+        <button id="favBtn">FAV</button>
+        <div class="modal-title">POKEDEX ENTRY </div>
+        <button id="closeBtn">CLOSE</button>
+      </div>
+      <div id="modalBody" class="modalBody"></div>
+    </div>
+    <div class="backgroundModal"></div>
+    <div id="btnContainer">
+      <button id="previousBtn"> PREV</button>
+      <button id="favoritesFilterBtn">FAV</button>
+      <button id="allFilterBtn">ALL</button>
+      <button id="nextBtn">NEXT</button>
+    </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis | Educational</footer>
 </body>
+
 </html>
