--- a/week13/index.html
+++ b/week13/index.html
@@ -49,8 +49,7 @@
     <div class="backgroundModal"></div>
     <div id="btnContainer">
       <button id="previousBtn"> PREV</button>
-      <button id="favoritesFilterBtn">FAV</button>
-      <button id="allFilterBtn">ALL</button>
+      <button id="favoritesFilterBtn"><a href="favoritePokeW13.html">FAV</a></button>
       <button id="nextBtn">NEXT</button>
     </div>
     <script src="./scripts/fetchApiW13.js" type="module"></script>
