--- a/week13/favoritePokeW13.html
+++ b/week13/favoritePokeW13.html
@@ -36,7 +36,7 @@
           <ol id="pokeList"></ol>
         </div>
         <div id="newBtnContainer">
-          <button id="returnToPokedex"><a href="../week13">RETRUN</a></button>
+          <button id="returnToPokedex"><a href="../week13">RETURN</a></button>
         </div>
         <script src="../scripts/main.js"></script>
         <footer>&copy 2020 | Portfolio | Stephen Ellis | Educational</footer>
