--- a/week6/index.html
+++ b/week6/index.html
@@ -32,7 +32,8 @@
     </div>
 <body>
     <div class="container">
-        <h1>To-Do app</h1>
+        <h2>To-Do app</h1>
+        <h1>I was trying to work with on touch so in order to remove the Item you must use your finger.</h2>
         <div>
             <ul class="list"></ul>
         </div>
