reworking team activities and completeing core requirements

--- a/week11/index.html
+++ b/week11/index.html
@@ -32,6 +32,7 @@
         </div>
     <head></head>
     <main></main>
+    <a class="Notes" href="../htmls/notesWeek11.html" title="Week 11 Notes">Notes Link</a><br><br>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
 </body>
