--- a/week3/index.html
+++ b/week3/index.html
@@ -49,9 +49,12 @@
         </p>
         <em>Psst: have a look at the JavaScript Console</em>
         " 💁" 
-    </main>
+    </main> 
+    <a class="Notes" href="../htmls/notesWeek3.html" title="Week 03 Notes">Notes Link</a><br><br>
+    
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="scripts/teamActivityW3.js"></script>
+   
     <script src="../scripts/main.js"></script>
 </body>
 </html>
