--- a/week5/index.html
+++ b/week5/index.html
@@ -31,11 +31,11 @@
           </a>
         </div>
         <h3>Team Activity:</h3>     
-        <p>This week Chloe was the driver for the team activity. The code is listed below.</p>
-        <a href="https://github.com/chloehollman/wdd330/tree/master/week5/scripts">link text</a></p>
     </main>
     </main>
+    <a class="Notes" href="../htmls/notesWeek5.html" title="Week 05 Notes">Notes Link</a><br><br>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
+    <script src="scripts/teamActivityW5.js"></script>
     <script src="../scripts/main.js"></script>
 </body>
 </html>
