--- a/week6/index.html
+++ b/week6/index.html
@@ -51,6 +51,7 @@
         <div class="filterActiveDiv"></div>
       </div>
     </div>
+    <a class="Notes" href="../htmls/notesWeek6.html" title="Week 06 Notes">Notes Link</a><br><br>
     <script src="scripts/toDoW6.js"></script>
     <script src="../scripts/main.js"></script>
 </body>
