--- a/htmls/notesWeek12.html
+++ b/htmls/notesWeek12.html
@@ -29,8 +29,8 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-    Week 12 also does not have any notes from readings. But will includes comments and siggestions<br>
-    I gave to me team member about her final challenge project...
+    Week 12 also does not have any notes from readings. But I did give comments and siggestions<br>
+    to my team member about her final challenge project...
     <script src="scripts/main.js"></script>
 </body>
 </html>
