--- a/week7/index.html
+++ b/week7/index.html
@@ -36,6 +36,7 @@
       <ul id="hikes" class="hikeStyles"></ul>
       <section id="comments"></section>
     </main>
+    <a class="Notes" href="../htmls/notesWeek7.html" title="Week 07 Notes">Notes Link</a><br><br>
     <script type="module" src="app5.js"></script>
     <script src="../scripts/main.js"></script>
   </body>
