css notes, buttons, and work on TAs

--- a/week5/index.html
+++ b/week5/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="styles/hikeStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -30,12 +31,19 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-        <h3>Team Activity:</h3>     
-    </main>
-    </main>
+        <h2>Team Activity:</h3>   
+    <main>
+    <h1>Great Hikes</h1>
+    <div>
+      <ul id="orderedHikeList" class="hikeGrid">
+      </ul>
+    </div>
+  </main>  
+  <div id="buttonGrid">
     <a class="Notes" href="../htmls/notesWeek5.html" title="Week 05 Notes">Notes Link</a><br><br>
+    </div>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
-    <script src="scripts/teamActivityW5.js"></script>
     <script src="../scripts/main.js"></script>
+    <script src="scripts/hikes.js"></script>
 </body>
 </html>
