--- a/htmls/notesWeek10.html
+++ b/htmls/notesWeek10.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 10 Read and Notes</title>
 </head>
 <body>
   <div class="container">
     <div class="navigationTop">
-      <label>PORTFOLIO - 2021</label>
+      <a href="../index.html" class="active">PORTFOLIO - 2021</a>
       <div class="weeklyLinks">
-        <a href="../week1">Week 1</a>
-        <a href="../week2">Week 2</a>
-        <a href="../week3">Week 3</a>
-        <a href="../week4">Week 4</a>
-        <a href="../week5">Week 5</a>
-        <a href="../week6">Week 6</a>
-        <a href="../week7">Week 7</a>
-        <a href="../week8">Week 8</a>
-        <a href="../week9">Week 9</a>
-        <a href="../week10">Week 10</a>
-        <a href="../week11">Week 11</a>
-        <a href="../week12">Week 12</a>
-        <a href="../week13">Week 13</a>
+        <a href="../WDD330-SELLIS/week1">Week 1</a>
+        <a href="../WDD330-SELLIS/week2">Week 2</a>
+        <a href="../WDD330-SELLIS/week3">Week 3</a>
+        <a href="../WDD330-SELLIS/week4">Week 4</a>
+        <a href="../WDD330-SELLIS/week5">Week 5</a>
+        <a href="../WDD330-SELLIS/week6">Week 6</a>
+        <a href="../WDD330-SELLIS/week7">Week 7</a>
+        <a href="../WDD330-SELLIS/week8">Week 8</a>
+        <a href="../WDD330-SELLIS/week9">Week 9</a>
+        <a href="../WDD330-SELLIS/week10">Week 10</a>
+        <a href="../WDD330-SELLIS/week11">Week 11</a>
+        <a href="../WDD330-SELLIS/week12">Week 12</a>
+        <a href="../WDD330-SELLIS/week13">Week 13</a>
       </div>
       <a href="javascript:void(0);" class="menuIcon" id="listControl">
         <i class="fa fa-bars"></i>
       </a>
     </div>
-    Week 10 reading:
+   <h2>Week 10 reading:</h2> 
 <p>This week I learned that form validation is very helpful and beneficial in a lot of ways. One is that is allows forms to require certain types of information. And to show the user this through different types of pop ups or highlighting. Some of these validations comes in shape of built-in client side and JavaScript type. With JavaScript is gives a lot more freedom and more specialized types of validation. But with HMTL, here is some built in validation, 
 “required: Specifies whether a form field needs to be filled in before the form can be submitted. minlength and maxlength: Specifies the minimum and maximum length of textual data (strings). min and max: Specifies the minimum and maximum values of numerical input types. type: Specifies whether the data needs to be a number, an email address, or some other specific preset type. pattern: Specifies a regular expression that defines a pattern the entered data needs to follow” (MDN web docs).
 Code example:
@@ -56,6 +58,11 @@ email.addEventListener("input", function (event) {
     email.setCustomValidity("");
   }
 });</p>
-<script src="scripts/main.js"></script>
+<div id="buttonGrid">
+  <button class="notesLink">
+        <a class="linkStyling" href="../week10">Week Activity</a>
+    </button>
+</div>
+<script src="../scripts/main.js"></script>
 </body>
 </html>
