--- a/htmls/notesWeek2.html
+++ b/htmls/notesWeek2.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <link rel="styleSheet" href="../styles/notes.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="navigationTop">
-          <label>PORTFOLIO - 2021</label>
+          <a href="../WDD330-SELLIS/index.html" class="active">PORTFOLIO - 2021</a>
           <div class="weeklyLinks">
-            <a href="../week1">Week 1</a>
-            <a href="../week2">Week 2</a>
-            <a href="../week3">Week 3</a>
-            <a href="../week4">Week 4</a>
-            <a href="../week5">Week 5</a>
-            <a href="../week6">Week 6</a>
-            <a href="../week7">Week 7</a>
-            <a href="../week8">Week 8</a>
-            <a href="../week9">Week 9</a>
-            <a href="../week10">Week 10</a>
-            <a href="../week11">Week 11</a>
-            <a href="../week12">Week 12</a>
-            <a href="../week13">Week 13</a>
+            <a href="../WDD330-SELLIS/week1">Week 1</a>
+            <a href="../WDD330-SELLIS/week2">Week 2</a>
+            <a href="../WDD330-SELLIS/week3">Week 3</a>
+            <a href="../WDD330-SELLIS/week4">Week 4</a>
+            <a href="../WDD330-SELLIS/week5">Week 5</a>
+            <a href="../WDD330-SELLIS/week6">Week 6</a>
+            <a href="../WDD330-SELLIS/week7">Week 7</a>
+            <a href="../WDD330-SELLIS/week8">Week 8</a>
+            <a href="../WDD330-SELLIS/week9">Week 9</a>
+            <a href="../WDD330-SELLIS/week10">Week 10</a>
+            <a href="../WDD330-SELLIS/week11">Week 11</a>
+            <a href="../WDD330-SELLIS/week12">Week 12</a>
+            <a href="../WDD330-SELLIS/week13">Week 13</a>
           </div>
           <a href="javascript:void(0);" class="menuIcon" id="listControl">
             <i class="fa fa-bars"></i>
@@ -36,17 +36,18 @@
             the same way as normal string literals, but with the extra power of string interpolation.>
             For this reason, it is not uncommon to see backticks used to createallstrings in ES6 code" 
             (JavaScript: Novice to Ninja, 2nd Edition).</p>
-        <h3>Code examples:</h3>
+        <h2>Code examples:</h2>
         <p>const name = `Siri`;
             `Hello ${ name }!`; 
             << 'Hello Siri!'!
             const age = 39;
             `I will be ${ age + 1 } next year`;
             << 'I will be 40 next year'</p>
-        <h3>Team Activity:</h3>
-        <p>This was our team activity this week. There is a link to the files on Chloe Hollman
-        GitHub, she was the driver for this week. <a href="https://github.com/chloehollman/wdd330/tree/master/week2">link text</a>
-        This is the team could that was done in class. I will also add some more to it.</p>
+        <div id="buttonGrid">
+            <button class="notesLink">
+                  <a class="linkStyling" href="../week2">Week Activity</a>
+              </button>
+          </div>
         <script src="../scripts/main.js"></script>
 </body>
 </html>
