--- a/htmls/notesWeek5.html
+++ b/htmls/notesWeek5.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 5 Read and Notes</title>
 </head>
 <body>
     <div class="container">
         <div class="navigationTop">
-          <label>PORTFOLIO - 2021</label>
+          <a href="../index.html" class="active">PORTFOLIO - 2021</a>
           <div class="weeklyLinks">
-            <a href="../week1">Week 1</a>
-            <a href="../week2">Week 2</a>
-            <a href="../week3">Week 3</a>
-            <a href="../week4">Week 4</a>
-            <a href="../week5">Week 5</a>
-            <a href="../week6">Week 6</a>
-            <a href="../week7">Week 7</a>
-            <a href="../week8">Week 8</a>
-            <a href="../week9">Week 9</a>
-            <a href="../week10">Week 10</a>
-            <a href="../week11">Week 11</a>
-            <a href="../week12">Week 12</a>
-            <a href="../week13">Week 13</a>
+            <a href="../WDD330-SELLIS/week1">Week 1</a>
+            <a href="../WDD330-SELLIS/week2">Week 2</a>
+            <a href="../WDD330-SELLIS/week3">Week 3</a>
+            <a href="../WDD330-SELLIS/week4">Week 4</a>
+            <a href="../WDD330-SELLIS/week5">Week 5</a>
+            <a href="../WDD330-SELLIS/week6">Week 6</a>
+            <a href="../WDD330-SELLIS/week7">Week 7</a>
+            <a href="../WDD330-SELLIS/week8">Week 8</a>
+            <a href="../WDD330-SELLIS/week9">Week 9</a>
+            <a href="../WDD330-SELLIS/week10">Week 10</a>
+            <a href="../WDD330-SELLIS/week11">Week 11</a>
+            <a href="../WDD330-SELLIS/week12">Week 12</a>
+            <a href="../WDD330-SELLIS/week13">Week 13</a>
           </div>
           <a href="javascript:void(0);" class="menuIcon" id="listControl">
             <i class="fa fa-bars"></i>
@@ -32,24 +34,29 @@
     <head>Week 5</head>
     <main>
         <h2>Notes:</h2>
-        <p> "A warning can occur if there’s an error in the code that isn't enough to cause the program<br>
-            to crash. This means the program will continue to run after a warning. This might sound good,<br>
-            but it can be problematic, since the issue that produced the warning may cause the program to<br>
-            continue running incorrectly... One of the most useful commands is the debugger keyword. This will<br>
-            create a breakpoint in your code that will pause the execution of the code and allow you to see where<br> 
-            the program is currently up to. You can also hover over any variables to see what value they hold at<br> 
-            that point. The program can then be restarted by clicking on the 'play' button."<br> 
+        <p> "A warning can occur if there’s an error in the code that isn't enough to cause the program
+            to crash. This means the program will continue to run after a warning. This might sound good,
+            but it can be problematic, since the issue that produced the warning may cause the program to
+            continue running incorrectly... One of the most useful commands is the debugger keyword. This will
+            create a breakpoint in your code that will pause the execution of the code and allow you to see where
+            the program is currently up to. You can also hover over any variables to see what value they hold at 
+            that point. The program can then be restarted by clicking on the 'play' button."
             (JavaScript: Novice to Ninja, 2nd Edition).</p><br>
 
-            Warnings do not always make the program crash. So you don't always have to fix them if it is not<br>
-            required. But is a good note to make aware of for your team or your future updates or changes.<br>
-            Debugging tools can help to solve or find bugs in the code. Some of those tools are listed below:<br>
+            Warnings do not always make the program crash. So you don't always have to fix them if it is not
+            required. But is a good note to make aware of for your team or your future updates or changes.
+            Debugging tools can help to solve or find bugs in the code. Some of those tools are listed below:
             These browsers have their own debugging documentation FireFox, Edge, Google Chrome, Safari.<br>
 
-        <h3>Code examples:</h3>
+        <h2>Code examples:</h2>
         <p>pi = 3.142;
             JavaScript Warning: assignment to undeclared variable
         </p><br>
-        <script src="scripts/main.js"></script>
+        <div id="buttonGrid">
+          <button class="notesLink">
+                <a class="linkStyling" href="../week5">Week Activity</a>
+            </button>
+        </div>
+        <script src="../scripts/main.js"></script>
 </body>
 </html>
