--- a/htmls/notesWeek6.html
+++ b/htmls/notesWeek6.html
@@ -3,38 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 6 Read and Notes</title>
 </head>
 <body>
     <div class="container">
         <div class="navigationTop">
-          <label>PORTFOLIO - 2021</label>
+          <a href="../index.html" class="active">PORTFOLIO - 2021</a>
           <div class="weeklyLinks">
-            <a href="../week1">Week 1</a>
-            <a href="../week2">Week 2</a>
-            <a href="../week3">Week 3</a>
-            <a href="../week4">Week 4</a>
-            <a href="../week5">Week 5</a>
-            <a href="../week6">Week 6</a>
-            <a href="../week7">Week 7</a>
-            <a href="../week8">Week 8</a>
-            <a href="../week9">Week 9</a>
-            <a href="../week10">Week 10</a>
-            <a href="../week11">Week 11</a>
-            <a href="../week12">Week 12</a>
-            <a href="../week13">Week 13</a>
+            <a href="../WDD330-SELLIS/week1">Week 1</a>
+            <a href="../WDD330-SELLIS/week2">Week 2</a>
+            <a href="../WDD330-SELLIS/week3">Week 3</a>
+            <a href="../WDD330-SELLIS/week4">Week 4</a>
+            <a href="../WDD330-SELLIS/week5">Week 5</a>
+            <a href="../WDD330-SELLIS/week6">Week 6</a>
+            <a href="../WDD330-SELLIS/week7">Week 7</a>
+            <a href="../WDD330-SELLIS/week8">Week 8</a>
+            <a href="../WDD330-SELLIS/week9">Week 9</a>
+            <a href="../WDD330-SELLIS/week10">Week 10</a>
+            <a href="../WDD330-SELLIS/week11">Week 11</a>
+            <a href="../WDD330-SELLIS/week12">Week 12</a>
+            <a href="../WDD330-SELLIS/week13">Week 13</a>
           </div>
           <a href="javascript:void(0);" class="menuIcon" id="listControl">
             <i class="fa fa-bars"></i>
           </a>
         </div>
-    <header>Week 6 - ToDo Challenge</header>
-    <p> Note: I was trying to implement a touch feature. After adding item if you<br>
-        it push the x or remove button it will work. But if you click with mouse it<br>
+    <h2>Week 6 - ToDo Challenge</h2>
+    <p> Note: I was trying to implement a touch feature. After adding item if you
+        it push the x or remove button it will work. But if you click with mouse it
         wont.<br>
-        I struggled a lot the past two weeks... I am plan on working more on<br>
+        I struggled a lot the past two weeks... I am plan on working more on
       my portfolio. And getting more TA help.</p>
-      <script src="scripts/main.js"></script>
+      <div id="buttonGrid">
+        <button class="notesLink">
+              <a class="linkStyling" href="../week6">Week Activity</a>
+          </button>
+      </div>
+      <script src="../scripts/main.js"></script>
 </body>
 </html>
