--- a/htmls/notesWeek7.html
+++ b/htmls/notesWeek7.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 7 Read and Notes</title>
 </head>
 <body>
   <div class="container">
     <div class="navigationTop">
-      <label>PORTFOLIO - 2021</label>
+      <a href="../index.html" class="active">PORTFOLIO - 2021</a>
       <div class="weeklyLinks">
-        <a href="../week1">Week 1</a>
-        <a href="../week2">Week 2</a>
-        <a href="../week3">Week 3</a>
-        <a href="../week4">Week 4</a>
-        <a href="../week5">Week 5</a>
-        <a href="../week6">Week 6</a>
-        <a href="../week7">Week 7</a>
-        <a href="../week8">Week 8</a>
-        <a href="../week9">Week 9</a>
-        <a href="../week10">Week 10</a>
-        <a href="../week11">Week 11</a>
-        <a href="../week12">Week 12</a>
-        <a href="../week13">Week 13</a>
+        <a href="../WDD330-SELLIS/week1">Week 1</a>
+        <a href="../WDD330-SELLIS/week2">Week 2</a>
+        <a href="../WDD330-SELLIS/week3">Week 3</a>
+        <a href="../WDD330-SELLIS/week4">Week 4</a>
+        <a href="../WDD330-SELLIS/week5">Week 5</a>
+        <a href="../WDD330-SELLIS/week6">Week 6</a>
+        <a href="../WDD330-SELLIS/week7">Week 7</a>
+        <a href="../WDD330-SELLIS/week8">Week 8</a>
+        <a href="../WDD330-SELLIS/week9">Week 9</a>
+        <a href="../WDD330-SELLIS/week10">Week 10</a>
+        <a href="../WDD330-SELLIS/week11">Week 11</a>
+        <a href="../WDD330-SELLIS/week12">Week 12</a>
+        <a href="../WDD330-SELLIS/week13">Week 13</a>
       </div>
       <a href="javascript:void(0);" class="menuIcon" id="listControl">
         <i class="fa fa-bars"></i>
@@ -31,23 +33,28 @@
     </div>
       <body>
         <main>
-          <h1>Great hikes</h1>
+          <h2>Great hikes</h2>
           <ul id="hikes" class="hikeStyles"></ul>
           <section id="comments"></section>
         </main>
         <h2>Week 06 Notes:</h2>
         <p>Dealing With A Settled Promise<br>
-          Once a promise has been settled, the then() method can be used to deal with the outcome.<br> 
-          This method accepts two arguments. The first is afulfilment functionthat’s called when<br> 
-          the promise is resolved. Any data returned from the resolve() function will be passed<br> 
-          along to this function. The second argument is a rejection function that’s called if<br> 
-          the promise is rejected. Similar to the fulfilment function, the rejection function<br> 
+          Once a promise has been settled, the then() method can be used to deal with the outcome.
+          This method accepts two arguments. The first is afulfilment functionthat’s called when
+          the promise is resolved. Any data returned from the resolve() function will be passed
+          along to this function. The second argument is a rejection function that’s called if
+          the promise is rejected. Similar to the fulfilment function, the rejection function 
           receives any data returned from the reject() function.</p>
           <h2>Code sample</h2>
           <p>
             romise.then( result => console.log(`I rolled a ${result}`) )
                 .catch( result => console.log(`Drat! ... I rolled a ${result}`) );
           </p>
-          <script src="scripts/main.js"></script>
+          <div id="buttonGrid">
+            <button class="notesLink">
+                  <a class="linkStyling" href="../week7">Week Activity</a>
+              </button>
+          </div>
+          <script src="../scripts/main.js"></script>
 </body>
 </html>
