--- a/htmls/notesWeek9.html
+++ b/htmls/notesWeek9.html
@@ -3,58 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Week 9 Read and Notes</title>
 </head>
 <body>
     <div class="container">
         <div class="navigationTop">
-          <label>PORTFOLIO - 2021</label>
+          <a href="../index.html" class="active">PORTFOLIO - 2021</a>
           <div class="weeklyLinks">
-            <a href="../week1">Week 1</a>
-            <a href="../week2">Week 2</a>
-            <a href="../week3">Week 3</a>
-            <a href="../week4">Week 4</a>
-            <a href="../week5">Week 5</a>
-            <a href="../week6">Week 6</a>
-            <a href="../week7">Week 7</a>
-            <a href="../week8">Week 8</a>
-            <a href="../week9">Week 9</a>
-            <a href="../week10">Week 10</a>
-            <a href="../week11">Week 11</a>
-            <a href="../week12">Week 12</a>
-            <a href="../week13">Week 13</a>
+            <a href="../WDD330-SELLIS/week1">Week 1</a>
+            <a href="../WDD330-SELLIS/week2">Week 2</a>
+            <a href="../WDD330-SELLIS/week3">Week 3</a>
+            <a href="../WDD330-SELLIS/week4">Week 4</a>
+            <a href="../WDD330-SELLIS/week5">Week 5</a>
+            <a href="../WDD330-SELLIS/week6">Week 6</a>
+            <a href="../WDD330-SELLIS/week7">Week 7</a>
+            <a href="../WDD330-SELLIS/week8">Week 8</a>
+            <a href="../WDD330-SELLIS/week9">Week 9</a>
+            <a href="../WDD330-SELLIS/week10">Week 10</a>
+            <a href="../WDD330-SELLIS/week11">Week 11</a>
+            <a href="../WDD330-SELLIS/week12">Week 12</a>
+            <a href="../WDD330-SELLIS/week13">Week 13</a>
           </div>
           <a href="javascript:void(0);" class="menuIcon" id="listControl">
             <i class="fa fa-bars"></i>
           </a>
         </div>
-    <header>Week 09 Reading:</header>
-<p>There are global variables for the can be used to get access to entire program.<br>
-However there are better and worst ways/times to do this because it sometimes<br>
-raises a risk. A risk of causing errors in our programs. Global variables are<br>
-part of properties on the global object aka the window object.<br><br> 
+    <h2>Week 09 Reading:</2>
+<p>There are global variables for the can be used to get access to entire program.
+However there are better and worst ways/times to do this because it sometimes
+raises a risk. A risk of causing errors in our programs. Global variables are
+part of properties on the global object aka the window object.<br>
 
-"In general, you should refer to global variables without using the window object;<br> 
-it’s less typing and your code will be more portable between environments. An exception is<br> 
-if you need to check whether a global variable has been defined. For example, the<br> 
-following code will throw a ReferenceError if x has not been defined" (JavaScript:<br> 
-Novice to Ninja, 2nd Edition).<br><br>
+"In general, you should refer to global variables without using the window object;
+it’s less typing and your code will be more portable between environments. An exception is 
+if you need to check whether a global variable has been defined. For example, the 
+following code will throw a ReferenceError if x has not been defined" (JavaScript:
+Novice to Ninja, 2nd Edition).<br>
 
-popup in windows is ok but from over the years they have gotten a bad name or a<br> 
-bad rep. Because of the popup method a lot of browsers now a days<br><br> 
+popup in windows is ok but from over the years they have gotten a bad name or a 
+bad rep. Because of the popup method a lot of browsers now a days<br> 
 
 "disallow some
-of these methods to be called in certain cases. For example, you can’t resize a<br> 
-window if more than one tab is open. You also can’t move or resize a window that<br> 
-wasn’t created using window.open(). It’s rare that it would be sensible to use<br> 
-any of these methods, so think very carefully before using them. There will almost<br> 
-always be a better alternative, and a ninja programmer will endeavor to find it"<br> 
-(JavaScript: Novice to Ninja, 2nd Edition).<br><br>
+of these methods to be called in certain cases. For example, you can’t resize a
+window if more than one tab is open. You also can’t move or resize a window that 
+wasn’t created using window.open(). It’s rare that it would be sensible to use 
+any of these methods, so think very carefully before using them. There will almost
+always be a better alternative, and a ninja programmer will endeavor to find it"
+(JavaScript: Novice to Ninja, 2nd Edition).<br>
 
-Everyone windows object has a document object that is which is where DOM comes in.<br> 
-Because it allows us to use certain properties and methods to create, manipulate, and<br> 
+Everyone windows object has a document object that is which is where DOM comes in. 
+Because it allows us to use certain properties and methods to create, manipulate, and
 change HTML. Giving us the ability to dynamically create tags, attributes, and etc.</p>
-<script src="scripts/main.js"></script>
+<div id="buttonGrid">
+  <button class="notesLink">
+        <a class="linkStyling" href="../week9">Week Activity</a>
+    </button>
+</div>
+<script src="../scripts/main.js"></script>
 </body>
 </html>
