--- a/htmls/notesWeek9.html
+++ b/htmls/notesWeek9.html
@@ -31,7 +31,7 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-    <h2>Week 09 Reading:</2>
+    <h2>Week 09 Reading:</h2>
 <p>There are global variables for the can be used to get access to entire program.
 However there are better and worst ways/times to do this because it sometimes
 raises a risk. A risk of causing errors in our programs. Global variables are
