--- a/week1/index.html
+++ b/week1/index.html
@@ -33,23 +33,23 @@
     <header>Week 1</header>
     <main>
         <h2>Notes:</h2>
-        <p>Master Mobile UX svideo – Three things that help with getting inside user’s heads<br>
-            when trying to design mobile websites:- Be there, be useful, be quick.Remember<br> 
-            that it is better to plan a website using mobile app design. Then we can expand<br> 
-            on this to other larger devices so that we can keep users. But there are other<br> 
-            important things that need to happen such the website needs to be reachable, menu<br> 
-            needs to be well placed, and faster. The history of mobile compare to pc or desktop<br> 
-            is interesting since the mobile has continued to increase. But mobile is having ben<br> 
-            able to increase at a high rate and it will continue to increase because of how mobile<br> 
-            devices can go everywhere.Start small and scale up think phone to monitor rather than<br> 
-            the other way around. Not only does out websites for site need to be well designed but<br> 
-            they need to be fast. How this can be done is by, reducing image usage throughout site/<br> 
-            app, SVG/Web fronts are lower bandwidth, Optimize CSS and JS files, GZIP files to<br> 
-            eliminate unnecessary data.Reachability, Speed and Network, all of things matter in<br> 
+        <p>Master Mobile UX svideo – Three things that help with getting inside user’s heads
+            when trying to design mobile websites:- Be there, be useful, be quick.Remember
+            that it is better to plan a website using mobile app design. Then we can expand
+            on this to other larger devices so that we can keep users. But there are other 
+            important things that need to happen such the website needs to be reachable, menu 
+            needs to be well placed, and faster. The history of mobile compare to pc or desktop 
+            is interesting since the mobile has continued to increase. But mobile is having ben
+            able to increase at a high rate and it will continue to increase because of how mobile 
+            devices can go everywhere.Start small and scale up think phone to monitor rather than
+            the other way around. Not only does out websites for site need to be well designed but
+            they need to be fast. How this can be done is by, reducing image usage throughout site
+            app, SVG/Web fronts are lower bandwidth, Optimize CSS and JS files, GZIP files to
+            eliminate unnecessary data.Reachability, Speed and Network, all of things matter in 
             order to make the sites more pleasing to users and will keep them. </p>
-        <h3>Code examples:</h3>
+        <h2>Code examples:</h2>
         <p>None for this week</p>
-        <h3>Team Activity:</h3>
+        <h2>Team Activity:</h2>
         <p>Teams not created yet</p>
     </main>
     <script src="../scripts/main.js"></script>
