--- a/week10/index.html
+++ b/week10/index.html
@@ -35,7 +35,11 @@
             <h1>Quake List</h1>
             <ul id="quakeList"></ul>
         </main>
-        <a class="Notes" href="../htmls/notesWeek10.html" title="Week 10 Notes">Notes Link</a><br><br>
+        <div id="buttonGrid">
+            <button class="notesLink">
+                  <a class="linkStyling" href="../htmls/notesWeek10.html">Notes Link</a>
+              </button>
+          </div>
         <script src="JavaScript/index.js" type="module" ></script>
         <script src="../scripts/main.js"></script>
         <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
