--- a/week11/index.html
+++ b/week11/index.html
@@ -32,7 +32,11 @@
         </div>
     <head></head>
     <main></main>
-    <a class="Notes" href="../htmls/notesWeek11.html" title="Week 11 Notes">Notes Link</a><br><br>
+    <div id="buttonGrid">
+        <button class="notesLink">
+              <a class="linkStyling" href="../htmls/notesWeek11.html">Notes Link</a>
+          </button>
+      </div>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
 </body>
