--- a/week12/index.html
+++ b/week12/index.html
@@ -32,7 +32,12 @@
         </div>
     <head></head>
     <main></main>
-    <a class="Notes" href="../htmls/notesWeek12.html" title="Week 12 Notes">Notes Link</a><br><br>
+    <div id="buttonGrid">
+      <button class="newGameBtn">New Game</button>
+        <button class="notesLink">
+              <a class="linkStyling" href="../htmls/notesWeek12.html">Notes Link</a>
+          </button>
+      </div>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
 </body>
