--- a/week2/index.html
+++ b/week2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="styles/teamActivityW2.css">
+    <link rel="stylesheet" href="../styles/notes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -45,7 +45,11 @@
             <div id="sumTotal"></div>
     
     </main>
-    <a class="Notes" href="../htmls/notesWeek2.html" title="Week 02 Notes">Notes Link</a><br><br>
+    <div id="buttonGrid">
+        <button class="notesLink">
+              <a class="linkStyling" href="../htmls/notesWeek2.html">Notes Link</a>
+          </button>
+      </div>
     <script src="scripts/teamActivityW2.js"></script>
     <script src="../scripts/main.js"></script>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
