--- a/week3/index.html
+++ b/week3/index.html
@@ -50,7 +50,11 @@
         <em>Psst: have a look at the JavaScript Console</em>
         " 💁" 
     </main> 
-    <a class="Notes" href="../htmls/notesWeek3.html" title="Week 03 Notes">Notes Link</a><br><br>
+    <div id="buttonGrid">
+          <button class="notesLink">
+                <a class="linkStyling" href="../htmls/notesWeek4.html">Notes Link</a>
+            </button>
+        </div>
     
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="scripts/teamActivityW3.js"></script>
