--- a/week5/index.html
+++ b/week5/index.html
@@ -40,7 +40,9 @@
     </div>
   </main>  
   <div id="buttonGrid">
-    <a class="Notes" href="../htmls/notesWeek5.html" title="Week 05 Notes">Notes Link</a><br><br>
+      <button class="notesLink">
+            <a class="linkStyling" href="../htmls/notesWeek5.html">Notes Link</a>
+        </button>
     </div>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="../scripts/main.js"></script>
