--- a/week6/index.html
+++ b/week6/index.html
@@ -32,8 +32,8 @@
     </div>
 <body>
     <div class="container">
-        <h2>To-Do app</h1>
-        <h1>I was trying to work with on touch so in order to remove the Item you must use your finger.</h2>
+        <h2>To-Do app</h2>
+        <p>I was trying to work with on touch so in order to remove the Item you must use your finger.</p>
         <div>
             <ul class="list"></ul>
         </div>
@@ -51,7 +51,11 @@
         <div class="filterActiveDiv"></div>
       </div>
     </div>
-    <a class="Notes" href="../htmls/notesWeek6.html" title="Week 06 Notes">Notes Link</a><br><br>
+    <div id="buttonGrid">
+        <button class="notesLink">
+              <a class="linkStyling" href="../htmls/notesWeek6.html">Notes Link</a>
+          </button>
+      </div>
     <script src="scripts/toDoW6.js"></script>
     <script src="../scripts/main.js"></script>
 </body>
