--- a/week8/index.html
+++ b/week8/index.html
@@ -33,11 +33,13 @@
         </div>
     <head></head>
     <main></main>
-    <ul id="newList"></ul>
-    <button id="prevBTN">PREV</button> 
-    <button id="nextBTN">NEXT</button><br><br>
-    <a class="Notes" href="../htmls/notesWeek8.html" title="Week 08 Notes">Notes Link</a><br><br>
-
+    <div id="buttonGrid">
+      <button class="notesLink">PREV</button> 
+        <button class="notesLink">NEXT</button>
+        <button class="notesLink">
+              <a class="linkStyling" href="../htmls/notesWeek8.html">Notes Link</a>
+          </button>
+      </div>
     <footer>&copy 2020 | Portfolio | Stephen Ellis</footer>
     <script src="scripts/teamActivityW8.js"></script>
     <script src="../scripts/main.js"></script>
