--- a/week9/index.html
+++ b/week9/index.html
@@ -79,7 +79,11 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-  <a class="Notes" href="../htmls/notesWeek9.html" title="Week 09 Notes">Notes Link</a><br><br>
+  <div id="buttonGrid">
+      <button class="notesLink">
+            <a class="linkStyling" href="../htmls/notesWeek9.html">Notes Link</a>
+        </button>
+    </div>
 <script src="scripts/teamActivityJS.js"></script>
 <script src="../scripts/main.js"></script>
 
