--- a/week7/index.html
+++ b/week7/index.html
@@ -32,12 +32,20 @@
     </div>
   <body>
     <main>
-      <h1>Great hikes</h1>
-      <ul id="hikes" class="hikeStyles"></ul>
-      <section id="comments"></section>
-    </main>
-    <a class="Notes" href="../htmls/notesWeek7.html" title="Week 07 Notes">Notes Link</a><br><br>
-    <script type="module" src="app5.js"></script>
+      <h2>Team Activity:</h3>   
+        <main>
+        <h1>Great Hikes</h1>
+        <div>
+          <ul id="orderedHikeList" class="hikeGrid">
+          </ul>
+        </div>
+      </main>  
+      <div id="buttonGrid">
+          <button class="notesLink">
+                <a class="linkStyling" href="../htmls/notesWeek7.html">Notes Link</a>
+            </button>
+        </div>
+    <script src="scripts/hikes.js"></script>
     <script src="../scripts/main.js"></script>
   </body>
 </html>
